# plonky2

./: .gitignore  Cargo.toml  Makefile
evm/src/cpu/kernel/asm/hash/blake2b/: compression.asm
evm/src/generation/: prover_input.rs
plonky2/src/plonk/: config.rs
starky-sha256/: Cargo.toml
starky-sha256/benches/: sha256_compression.rs  sha256_h3.rs
starky-sha256/examples/: h3.rs  time_sha256_compression.rs
starky-sha256/src/: config.rs  get_challenges.rs  lib.rs  permutation.rs  proof.rs  prover.rs  recursive_verifier.rs  stark.rs  stark_testing.rs  vanishing_poly.rs  verifier.rs
starky-sha256/src/sha256_stark/: generation.rs  mod.rs
